add nullaway, errorprone, archunit and remove package-info-files